--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">MeliChallenge</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_product_detail">ProductDetailActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- Initial Activity -->
+    <string name="img_launcher_icon_content_desc">Icono de la applicación</string>
+
+    <!-- Main Activity -->
+    <string name="txt_search_item_hint">Buscar en Mercado Libre</string>
+    <string name="lbl_no_items_found">No hay resultados para mostrar</string>
+
+    <!-- fragment_search_results_items -->
+    <string name="img_search_result_item_content_desc">Imagen del artículo</string>
+    <string name="lbl_best_seller_text">Más vendido</string>
+
+    <!-- Product Detail Activity -->
+
 </resources>
