--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -10,7 +10,11 @@
 
     <!-- fragment_search_results_items -->
     <string name="img_search_result_item_content_desc">Imagen del artículo</string>
+    <string name="img_favorite_item_content_desc">Agregar a favoritos</string>
     <string name="lbl_best_seller_text">Más vendido</string>
+    <string name="lbl_free_shipping_text">Envío gratis</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Product Detail Activity -->
 
