--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -13,9 +13,15 @@
     <string name="img_favorite_item_content_desc">Agregar a favoritos</string>
     <string name="lbl_best_seller_text">Más vendido</string>
     <string name="lbl_free_shipping_text">Envío gratis</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Product Detail Activity -->
+
+    <!-- Filters -->
+    <string name="lbl_filter_categories_choose_category">Eligir categoría</string>
+    <string name="lbl_filter_sort_by">Ordenar por:</string>
+    <string name="lbl_filter_range_minimum">Mínimo</string>
+    <string name="lbl_filter_range_maximum">Máximo</string>
+    <string name="lbl_clean_filters">Limpiar Filtros</string>
+    <string name="lbl_filter_dialog_header_text">Filtrar por:</string>
 
 </resources>
